// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttributeOptionList when isVisible is passed as false should display only 'hide' icon 1`] = `
<DocumentFragment>
  <i
    aria-hidden="true"
    class="ci-hide text-xl leading-5 text-neutral-shade-75"
  />
</DocumentFragment>
`;

exports[`AttributeOptionList when isVisible is passed as false should display only 'hide' icon, even when isFilterable and isRequired are true 1`] = `
<DocumentFragment>
  <i
    aria-hidden="true"
    class="ci-hide text-xl leading-5 text-neutral-shade-75"
  />
</DocumentFragment>
`;

exports[`AttributeOptionList when isVisible is passed should display 'filter' icon when isFilterable is true 1`] = `
<DocumentFragment>
  <ul
    class="flex gap-2"
  >
    <li>
      <i
        aria-hidden="true"
        class="ci-show text-xl leading-5 text-neutral-shade-75"
      />
    </li>
    <li>
      <i
        aria-hidden="true"
        class="ci-filter text-xl leading-5 text-neutral-shade-75"
      />
    </li>
  </ul>
</DocumentFragment>
`;

exports[`AttributeOptionList when isVisible is passed should display 'required' icon when isRequired is true 1`] = `
<DocumentFragment>
  <ul
    class="flex gap-2"
  >
    <li>
      <i
        aria-hidden="true"
        class="ci-show text-xl leading-5 text-neutral-shade-75"
      />
    </li>
    <li>
      <i
        aria-hidden="true"
        class="text-xl leading-5 text-neutral-shade-75"
      >
        <svg
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10.875 9.28V3.5a.5.5 0 01.5-.5h1.25a.5.5 0 01.5.5v5.788l4.094-4.094a.5.5 0 01.707 0l.884.884a.5.5 0 010 .707l-4.09 4.09h5.78a.5.5 0 01.5.5v1.25a.5.5 0 01-.5.5h-5.78l4.09 4.09a.5.5 0 010 .707l-.884.884a.5.5 0 01-.707 0l-4.094-4.094V20.5a.5.5 0 01-.5.5h-1.25a.5.5 0 01-.5-.5v-5.78l-4.086 4.086a.5.5 0 01-.707 0l-.884-.884a.5.5 0 010-.707l4.09-4.09H3.5a.5.5 0 01-.5-.5v-1.25a.5.5 0 01.5-.5h5.788l-4.09-4.09a.5.5 0 010-.707l.884-.884a.5.5 0 01.707 0l4.086 4.086z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </i>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`AttributeOptionList when isVisible is passed should display 'show' icon 1`] = `
<DocumentFragment>
  <ul
    class="flex gap-2"
  >
    <li>
      <i
        aria-hidden="true"
        class="ci-show text-xl leading-5 text-neutral-shade-75"
      />
    </li>
  </ul>
</DocumentFragment>
`;

exports[`AttributeOptionList when isVisible is passed should display all 3 icons when all props are true 1`] = `
<DocumentFragment>
  <ul
    class="flex gap-2"
  >
    <li>
      <i
        aria-hidden="true"
        class="ci-show text-xl leading-5 text-neutral-shade-75"
      />
    </li>
    <li>
      <i
        aria-hidden="true"
        class="text-xl leading-5 text-neutral-shade-75"
      >
        <svg
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10.875 9.28V3.5a.5.5 0 01.5-.5h1.25a.5.5 0 01.5.5v5.788l4.094-4.094a.5.5 0 01.707 0l.884.884a.5.5 0 010 .707l-4.09 4.09h5.78a.5.5 0 01.5.5v1.25a.5.5 0 01-.5.5h-5.78l4.09 4.09a.5.5 0 010 .707l-.884.884a.5.5 0 01-.707 0l-4.094-4.094V20.5a.5.5 0 01-.5.5h-1.25a.5.5 0 01-.5-.5v-5.78l-4.086 4.086a.5.5 0 01-.707 0l-.884-.884a.5.5 0 010-.707l4.09-4.09H3.5a.5.5 0 01-.5-.5v-1.25a.5.5 0 01.5-.5h5.788l-4.09-4.09a.5.5 0 010-.707l.884-.884a.5.5 0 01.707 0l4.086 4.086z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </i>
    </li>
    <li>
      <i
        aria-hidden="true"
        class="ci-filter text-xl leading-5 text-neutral-shade-75"
      />
    </li>
  </ul>
</DocumentFragment>
`;
